Fix header alignment left and right for laptops and larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,17 @@ footer {
 /*Media query for laptop and larger (from 992px and larger*/
 @media screen and (min-width: 992px) {
   /* Header */
+  header {
+    justify-content: flex-start;
+    gap: 1%;
+    flex: 0 0 auto;
+  }
+  #menu-nav {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1 0 auto;
+  }
+
   /* Make menu always visible to better use horizoltal space */
   #menu {
     font-size: 150%;
